add_executable(test_database
    test_database.cpp
)
target_link_libraries(test_database
    sqlite
    gtest
    gtest_main
)
add_test(test_database
    test_database
)

add_executable(test_statement
    test_statement.cpp
)
target_link_libraries(test_statement
    sqlite
    gtest
    gtest_main
)
add_test(test_statement
    test_statement
)

add_executable(test_result_map
    test_result_map.cpp
)
target_link_libraries(test_result_map
    sqlite
    gtest
    gtest_main
)
add_test(test_result_map
    test_result_map
)
